Loading & error states, dotenv support

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="theme-color" content="#ddd">
 
-  <title>Svelte app</title>
+  <title>Teplota</title>
 
   <link rel='icon' type='image/png' href='/icon.png'>
   <link rel="apple-touch-icon" href="/icon-ios.png">
