Loading & error states, colors, dotenv support

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <link rel="manifest" href="/manifest.json">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="theme-color" content="#ddd">
+  <meta name="theme-color" content="#3f8eb6">
 
   <title>Teplota</title>
 
