--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
   <link rel='stylesheet' href='/global.css'>
   <link rel='stylesheet' href='/bundle.css'>
 
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
+
   <script defer src='/bundle.js'></script>
 </head>
 
