Add Czech and English translations

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="theme-color" content="#3f8eb6">
 
-  <title>Teplota</title>
+  <title>Temperature</title>
 
   <link rel='icon' type='image/png' href='/icon.png'>
   <link rel="apple-touch-icon" href="/icon-ios.png">
