--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="theme-color" content="#3f8eb6">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
   <title>Temperature</title>
 
