--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,22 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset='utf-8'>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1.0, user-scalable=no">
-  <meta name="author" content="Martin Kapal">
-  <link rel="manifest" href="/manifest.json">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="theme-color" content="#3f8eb6">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-
+  <meta charset="utf-8">
   <title>Temperature</title>
-
-  <link rel='icon' type='image/png' href='/icon.png'>
-  <link rel="apple-touch-icon" href="/icon-ios.png">
-  <link rel="apple-touch-icon" sizes="225x225" href="/icon-ios.png">
-  <link rel='stylesheet' href='/global.css'>
-  <link rel='stylesheet' href='/bundle.css'>
-
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
-
-  <script defer src='/bundle.js'></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no, maximum-scale=1.0, user-scalable=no">
+  <meta name="author" content="Martin Kapal">
+  <meta name="description" content="Remote temperature client">
+  <meta name="theme-color" content="#3f8eb6">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <link rel="manifest" href="/manifest.json">
+  <link rel="apple-touch-icon" href="/icon-apple-180x180.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/icon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/icon-32x32.png">
+  <link rel="stylesheet" href="/global.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap">
+  <script defer src="/bundle.js"></script>
 </head>
-
 <body>
 </body>
 </html>
