Move files to correct places

--- a/public/index.html
+++ b/public/index.html
@@ -18,5 +18,8 @@
   <script defer src="/bundle.js"></script>
 </head>
 <body>
+<script>
+  navigator.serviceWorker.register('/service-worker.js');
+</script>
 </body>
 </html>
