--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/icon-16x16.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/icon-32x32.png">
   <link rel="stylesheet" href="/global.css">
+  <link rel="stylesheet" href="/bundle.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap">
   <script defer src="/bundle.js"></script>
 </head>
