--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no, maximum-scale=1.0, user-scalable=no">
   <meta name="author" content="Martin Kapal">
   <meta name="description" content="Remote temperature client">
-  <meta name="theme-color" content="#3f8eb6">
+  <meta name="theme-color" content="#1e5799">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <link rel="manifest" href="/manifest.json">
