--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,14 @@
   <link rel="stylesheet" href="/bundle.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap">
   <script defer src="/bundle.js"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WF6K4EBQXD"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-WF6K4EBQXD');
+  </script>
 </head>
 <body>
 <script>
