--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Remote temperature client">
   <meta name="theme-color" content="#1e5799">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon-apple-180x180.png">
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
